infrastructure/keycloak/ingress-admin/ingress-admin-keyckoak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: traefik-admin
    meta.helm.sh/release-name: keycloak
    meta.helm.sh/release-namespace: auth
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 26.1.0
    helm.sh/chart: keycloak-24.4.8
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-adm
spec:
  ingressClassName: traefik-admin
  rules:
  - host: keycloak.admin.cluster.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-http
            port:
              name: http
  tls:
  - hosts:
    - keycloak.admin.cluster.local.com
    secretName: wildcard-admin-cluster-tls
